# minstructor

./: README.md  example.py  pyproject.toml
tutorial/: Tutorial.md
